--- a/blog_detail.html
+++ b/blog_detail.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/settings.css">
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/layers.css">
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/navigation.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lightgallery.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lg-zoom.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/justifiedGallery.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lg-thumbnail.css">
 
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
@@ -373,37 +377,67 @@
             </div>
             <div class="gallery">
                 <div class="wrapper-gallery">
-                    <div class="row row-masonry" data-masonry="{&quot;percentPosition&quot;: true }">
-                        <div class="col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d01.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d02.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d03.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d04.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d05.jpg" alt="">
-                            </div>
-                        </div>
-                        <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                            <div class="grid-item">
-                                <img src="assets/images/d06.jpg" alt="">
-                            </div>
-                        </div>
+                    <div class="gallery-container" id="animated-thumbnails-gallery">
+                        <a class="gallery-item" data-src="assets/images/d01.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d01.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d02.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d02.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d03.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d03.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d04.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d04.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d05.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d05.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d06.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d06.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d07.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d07.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d08.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d08.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d09.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d09.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d10.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d10.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d01.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d01.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d02.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d02.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d03.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d03.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d04.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d04.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d05.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d05.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d06.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d06.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d07.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d07.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d08.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d08.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d09.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d09.jpg"/>
+                        </a>
+                        <a class="gallery-item" data-src="assets/images/d10.jpg">
+                            <img alt="" class="img-responsive" src="assets/images/d10.jpg"/>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -604,8 +638,39 @@
 <script src="assets/js/jquery-ui.min.js"></script>
 <script src="assets/js/plugincollection.js"></script>
 <script src="assets/js/jquery-modal-video.min.js"></script>
-<script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/vendors/lightgallery/lightgallery.umd.js"></script>
+<script src="assets/vendors/lightgallery/lg-zoom.umd.js"></script>
+<script src="assets/vendors/lightgallery/jquery.justifiedGallery.js"></script>
+<script src="assets/vendors/lightgallery/lg-thumbnail.umd.js"></script>
+
 <script src="assets/js/app.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#animated-thumbnails-gallery")
+            .justifiedGallery({
+                captions: false,
+                rowHeight: 200,
+                margins: 15
+            })
+            .on("jg.complete", function () {
+                window.lightGallery(
+                    document.getElementById("animated-thumbnails-gallery"),
+                    {
+                        autoplayFirstVideo: false,
+                        pager: false,
+                        galleryId: "nature",
+                        plugins: [lgZoom, lgThumbnail],
+                        mobileSettings: {
+                            controls: false,
+                            showCloseIcon: false,
+                            download: false,
+                            rotate: false
+                        }
+                    }
+                );
+            });
+    });
+</script>
 
 </body>
 </html>
