--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/settings.css">
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/layers.css">
     <link rel="stylesheet" type="text/css" href="assets/revolution/css/navigation.css">
-
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lightgallery.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lg-zoom.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/justifiedGallery.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/lightgallery/css/lg-thumbnail.css">
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="bl_frontend">
@@ -358,131 +361,115 @@
 
     <section class="section-gallery section-padding">
         <div class="container">
-            <ul class="nav nav-pills mb-5" id="pills-tab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="gallery-1-tab" data-bs-toggle="pill" data-bs-target="#gallery-1" type="button" role="tab" aria-controls="gallery-1" aria-selected="true">
+            <ul class="nav mb-4">
+                <li class="nav-item" >
+                    <a class="nav-link active">
                         Thư viện 1
-                    </button>
+                    </a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="gallery-2-tab" data-bs-toggle="pill" data-bs-target="#gallery-2" type="button" role="tab" aria-controls="gallery-2" aria-selected="false">
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
                         Thư viện 2
-                    </button>
+                    </a>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="gallery-3-tab" data-bs-toggle="pill" data-bs-target="#gallery-3" type="button" role="tab" aria-controls="gallery-3" aria-selected="false">
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
                         Thư viện 3
-                    </button>
+                    </a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
+                        Thư viện 4
+                    </a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
+                        Thư viện 5
+                    </a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
+                        Thư viện 2
+                    </a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
+                        Thư viện 3
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Thư viện 4
+                    </a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="#">
+                        Thư viện 5
+                    </a>
                 </li>
             </ul>
-            <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="gallery-1" role="tabpanel" aria-labelledby="gallery-1-tab" tabindex="0">
-                    <div class="wrapper-gallery">
-                        <div class="row row-masonry" data-masonry="{&quot;percentPosition&quot;: true }">
-                            <div class="col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d01.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d02.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d03.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d04.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d05.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d06.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="gallery-2" role="tabpanel" aria-labelledby="gallery-2-tab" tabindex="0">
-                    <div class="wrapper-gallery">
-                        <div class="row row-masonry" data-masonry="{&quot;percentPosition&quot;: true }">
-                            <div class="col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d01.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d02.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d03.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d04.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d05.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d06.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="gallery-3" role="tabpanel" aria-labelledby="gallery-3-tab" tabindex="0">
-                    <div class="wrapper-gallery">
-                        <div class="row row-masonry" data-masonry="{&quot;percentPosition&quot;: true }">
-                            <div class="col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d01.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d02.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d03.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d04.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d05.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="grid-item col-6 col-lg-4 col-xl-3 mb-4">
-                                <div class="grid-item">
-                                    <img src="assets/images/d06.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="wrapper-gallery">
+                <div class="gallery-container" id="animated-thumbnails-gallery">
+                    <a class="gallery-item" data-src="assets/images/d01.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d01.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d02.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d02.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d03.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d03.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d04.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d04.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d05.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d05.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d06.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d06.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d07.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d07.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d08.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d08.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d09.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d09.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d10.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d10.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d01.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d01.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d02.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d02.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d03.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d03.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d04.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d04.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d05.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d05.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d06.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d06.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d07.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d07.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d08.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d08.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d09.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d09.jpg"/>
+                    </a>
+                    <a class="gallery-item" data-src="assets/images/d10.jpg">
+                        <img alt="" class="img-responsive" src="assets/images/d10.jpg"/>
+                    </a>
                 </div>
             </div>
         </div>
@@ -562,20 +549,38 @@
 <script src="assets/js/jquery-ui.min.js"></script>
 <script src="assets/js/plugincollection.js"></script>
 <script src="assets/js/jquery-modal-video.min.js"></script>
-<script src="assets/js/masonry.pkgd.min.js"></script>
+<script src="assets/vendors/lightgallery/lightgallery.umd.js"></script>
+<script src="assets/vendors/lightgallery/lg-zoom.umd.js"></script>
+<script src="assets/vendors/lightgallery/jquery.justifiedGallery.js"></script>
+<script src="assets/vendors/lightgallery/lg-thumbnail.umd.js"></script>
 
 <script src="assets/js/app.js"></script>
 
 <script>
     $(document).ready(function (){
-        $('button[data-bs-toggle="pill"]').on('shown.bs.tab', function (e) {
-            let targetTab = $(e.target).attr('data-bs-target');
-            if ($(targetTab).find('.row-masonry').length > 0) {
-                $(targetTab).find('.row-masonry').masonry({
-                    percentPosition: true
-                });
-            }
-        });
+        $("#animated-thumbnails-gallery")
+            .justifiedGallery({
+                captions: false,
+                rowHeight: 200,
+                margins: 15
+            })
+            .on("jg.complete", function () {
+                window.lightGallery(
+                    document.getElementById("animated-thumbnails-gallery"),
+                    {
+                        autoplayFirstVideo: false,
+                        pager: false,
+                        galleryId: "nature",
+                        plugins: [lgZoom, lgThumbnail],
+                        mobileSettings: {
+                            controls: false,
+                            showCloseIcon: false,
+                            download: false,
+                            rotate: false
+                        }
+                    }
+                );
+            });
     });
 </script>
 </body>
